force-app/main/default/objects/Contact/fields/Collective_URL__c.field-meta.xml
<CustomField>
    <fullName>Collective_URL__c</fullName>
    <label>Collective URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>