force-app/main/default/objects/Contact/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>