force-app/main/default/objects/Contact/fields/Is_Priority__c.field-meta.xml
<CustomField>
    <fullName>Is_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Priority</label>
    <type>Checkbox</type>
</CustomField>