force-app/main/default/objects/Contact/fields/VSE__c.field-meta.xml
<CustomField>
    <fullName>VSE__c</fullName>
    <label>VSE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>