force-app/main/default/objects/Contact/validationRules/Mobile_need_to_fill.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_need_to_fill</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(MobilePhone) &amp;&amp; (NOT(ISBLANK(PRIORVALUE(MobilePhone))))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Mobile phone need to fill</errorMessage>
</ValidationRule>