force-app/main/default/objects/Contact/validationRules/phone_number_must_contain_ten_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_number_must_contain_ten_digits</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(Phone, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorMessage>phone number must contain 10 digits</errorMessage>
</ValidationRule>